--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,9 @@
         font-family: "Roboto", sans-serif;
         margin: 0;
       }
+      *, *::before, *::after {
+        box-sizing: border-box;
+      }
     </style>
     <title>React App</title>
   </head>
