--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
         box-sizing: border-box;
       }
     </style>
-    <title>React App</title>
+    <title>Cinephoria</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
